updated font search

--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ input {
     border: 0;
 	}
 
+#searchInput {
+	margin-left: 5px;
+}
+
 .navlink a {
     color: #bbbbbb;
     text-decoration: none;
